# gear

./: .clang-format
LTL/: CMakeLists.txt
LTL/include/LTL/: Ostream.h  Result.h  Save.h  String.h  Vector.h
LTL/src/: Ostream.cpp  String.cpp
doc/sova/: index.html  style.css
sova/: .gitignore  Block.cpp  Block.h  Bool.cpp  Bool.h  BuiltinFunctions.cpp  BuiltinFunctions.h  CMakeLists.txt  Call.cpp  Call.h  Common.h  Context.cpp  Context.h  Dict.cpp  Dict.h  Form.cpp  Form.h  Function.cpp  Function.h  GarbageCollector.cpp  GarbageCollector.h  Global.h  If.cpp  If.h  LValue.h  Lambda.cpp  Lambda.h  LambdaForm.cpp  LambdaForm.h  List.cpp  List.h  MapObject.h  Number.cpp  Number.h  Object.cpp  Object.h  ObjectPtr.cpp  ObjectPtr.h  Ostream.cpp  Ostream.h  (+20 more)
sova/doc/: index.html
sova/snippets/: c_for_loop.sova
sova/src/: Block.cpp  Block.h  Bool.cpp  Call.cpp  Call.h  Common.h  Context.cpp  Context.h  Form.cpp  Form.h  Function.cpp  Function.h  FunctionType.cpp  FunctionType.h  If.cpp  If.h  LValue.cpp  LValue.h  Lambda.cpp  Lambda.h  LambdaForm.cpp  LambdaForm.h  Libraries.h  List.cpp  List.h  Number.cpp  Object.cpp  Object.h  ObjectPtr.cpp  ObjectPtr.h  OperatorData.h  Ostream.cpp  Parser.cpp  Parser.h  Reference.cpp  Reference.h  RuntimeError.cpp  RuntimeError.h  String.cpp  String.h  (+13 more)
sova/test/: a.sova  aggregate_expressions.sova  associvity.sova  context_object.sova  precedence.sova  type_function.sova
